2007-06-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/common/config.py (BaseConfigParser.parseFeedId):
	Make sure feedIds stored in eater dict are proper feedIds.
	* flumotion/manager/manager.py (Vishnu.parseFeedId,
	  Vishnu.fixOldEaterConfig, Vishnu.verifyExistingComponentState,
	  Vishnu.makeNewComponentState):
	Move common code out to new function. Translate feedIds to proper
	feedIds.

2007-06-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/test_component.py (PipelineTest.__init__,
	  PipelineTest.config):
	* flumotion/test/test_component_httpstreamer.py
	  (TestOldProperties.setUp):
	* flumotion/test/test_manager_depgraph.py
	  (testDepGraph._createComponent):
	Add source key back so that tests more accurately reflect reality
	because parser adds this key.

2007-06-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/converters/overlay/overlay.py
	  (Overlay.get_pipeline_string):
	Fix to use eater dict.
	* flumotion/component/muxers/multipart.py:
	Port to MultiInputParseLaunchComponent, turns out this fixes
	it to use eater dict.

2007-06-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/manager/manager.py (Vishnu.verifyExistingComponentState,
	  Vishnu.makeNewComponentState):
	Do not assume "default" as the eater name when building the
	eater dict. Use flumotion.common.config.buildEaterDict to do the
	actual building.
	Also handle the other case where component logging in has no
	eater dict in its config.

2007-06-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/manager/manager.py (Vishnu.verifyExistingComponentState):
	Handle case where logged in component has no eater dict in its
	config but does have a list of source(s). Manager config is
	changed to reflect component config + a generated eater dict
	based from source list.

2007-06-05  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/base/scheduler.py (LocalTimezone): New